--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,22 @@
 services:
+  db:
+    image: postgres:18.2
+    container_name: pg18
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: appuser
+      POSTGRES_PASSWORD: change-me-very-strong
+      POSTGRES_DB: appdb
+    ports:
+      - "127.0.0.1:5433:5432"
+    volumes:
+      - pg18-data:/var/lib/postgresql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U appuser -d appdb"]
+      interval: 5s
+      timeout: 3s
+      retries: 20
+
   api:
     build:
       context: ./server
@@ -7,6 +25,11 @@ services:
     restart: unless-stopped
     ports:
       - "127.0.0.1:8000:8000"
+    environment:
+      DATABASE_URL: postgresql+psycopg2://appuser:change-me-very-strong@db:5432/appdb
+    depends_on:
+      db:
+        condition: service_healthy
 
   web:
     build:
@@ -18,3 +41,6 @@ services:
       - "127.0.0.1:4173:4173"
     depends_on:
       - api
+
+volumes:
+  pg18-data:
